Fix album homepages scrollbar CSS.

--- a/app/assets/stylesheets/users/album_homepages.scss
+++ b/app/assets/stylesheets/users/album_homepages.scss
@@ -4,6 +4,7 @@
   .card {
     height: 47.2rem;
     .card-body {
+      scrollbar-width: none;
       overflow-y: scroll;
     }
   }
